# wgpu_winit_example

./: .gitignore  Cargo.toml  LICENSE  README.md
ch00_simple_winit/: Cargo.toml  README.md
ch00_simple_winit/src/: app.rs  main.rs
ch01_render_a_triangle/: Cargo.toml  README.md
ch01_render_a_triangle/src/: app.rs  wgpu_ctx.rs
ch01_render_in_window/: Cargo.toml  README.md
ch01_render_in_window/src/: app.rs  wgpu_ctx.rs
ch02_render_a_triangle/: Cargo.toml  README.md
ch02_render_a_triangle/examples/switch_pipeline/: README.md  app.rs  shader2.wgsl  wgpu_ctx.rs
ch02_render_a_triangle/src/: wgpu_ctx.rs
ch02_switch_pipeline/: Cargo.toml
ch02_switch_pipeline/src/: main.rs  wgpu_ctx.rs
ch03_buffer/: Cargo.toml
ch03_buffer/src/: vertex.rs  wgpu_ctx.rs
ch03_switch_pipeline/: Cargo.toml
ch03_switch_pipeline/src/: wgpu_ctx.rs
ch03_vertex_buffer/: Cargo.toml
ch03_vertex_buffer/src/: shader.wgsl  wgpu_ctx.rs
ch04_index_buffer/: Cargo.toml
ch04_index_buffer/src/: app.rs  main.rs  vertex.rs
ch04_vertex_index_buffer/: Cargo.toml
ch04_vertex_index_buffer/src/: wgpu_ctx.rs
ch05_texture_and_bind_group/: Cargo.toml
ch05_texture_and_bind_group/src/: img_utils.rs  main.rs  shader.wgsl  vertex.rs  wgpu_ctx.rs
